# canary_flow

./: README.md  poem.txt  pyproject.toml
src/canary_flow/: create_vertex_config.py  main.py
src/canary_flow/crews/research_crew/: __init__.py  research_crew.py
src/canary_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
