[project]
name = "canary_flow"
version = "0.1.0"
description = "canary_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
]

[project.scripts]
kickoff = "canary_flow.main:kickoff"
run_crew = "canary_flow.main:kickoff"
plot = "canary_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
